--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam necessitatibus magnam suscipit minus dolor facilis tenetur impedit est, blanditiis illo ipsa perspiciatis accusantium provident praesentium quod? Itaque nisi et quaerat.</p>
 </body>
 </html>
